BestCryptoWallet logo leads to homepage and fixed my stock green bar text as it was going too much to the right and disappered

--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ svg {
 
 .Header_PrimaryToolbarButton {
     color: white;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 700;
     line-height: 48px;
     opacity: 0.9;
